<resources>
    <string name="app_name">Plazi</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="txtUser">Nombre usuario</string>
    <string name="txtPass">Contraseña</string>
    <string name="btnLogin">LOGIN</string>
    <string name="notengocuenta">¿No tienes cuenta? , </string>
    <string name="crearaqui">Crea una aqui</string>
    <string name="hintEmail">Correo</string>
    <string name="hintName">Nombre</string>
    <string name="hintUser">Usuario</string>
    <string name="hintPassword">Contraseña</string>
    <string name="hintPasswordConfirmar">Confirmar contraseña</string>
    <string name="txtCrear">AGREGAR</string>
    <string name="titulo_toolbar_crear">CREAR CUENTA</string>
    <string name="usernombrecard">ELIAS MERLO</string>
    <string name="txt_firstword">hace </string>
    <string name="txt_timecard">20 dias</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seconword_deteil">ME GUSTA</string>
    <string name="titleImage">TODO EN LA SELVA ES MEJOR</string>
    <string name="lorem">En el Perú, la Selva y el Oriente (antiguamente llamada la montaña) son denominaciones locales de la Amazonia, la gran selva tropical de América del Sur. La porción de territorio que este bioma ocupa, tiene un área de más de 782.800 km² desde las estribaciones orientales de la cordillera de los Andes hasta los límites políticos con Ecuador, Colombia, Brasil y Bolivia en el llano amazónico.  La Amazonía peruana es una de las áreas con mayor biodiversidad y endemismos del planeta, así como la región biogeográfica peruana con menor población humana. No obstante tener la menor densidad poblacional del país, es a su vez la más diversa antropológicamente. La mayor parte de etnias del país se asientan en ella y son habladas allí el grueso de las lenguas autóctonas del Perú.</string>

</resources>
