<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CrearUsuarioActivity">

    <include layout="@layout/acctionbar_tollbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_vertical_margin"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EdiTexBlack"
            android:layout_margin="@dimen/edttext_margen_crearcuenta">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintEmail"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EdiTexBlack"
            android:layout_margin="@dimen/edttext_margen_crearcuenta">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintName"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EdiTexBlack"
            android:layout_margin="@dimen/edttext_margen_crearcuenta">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintUser"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EdiTexBlack"
            android:layout_margin="@dimen/edttext_margen_crearcuenta">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EdiTexBlack"
            android:layout_margin="@dimen/edttext_margen_crearcuenta">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtpasswordconfirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPasswordConfirmar"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnCrear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCrear"
            android:theme="@style/RaiseButtonDark"/>

    </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>