<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReferenciaActivity"
        android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/logo"/>
        </RelativeLayout>
        
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EdiTexWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtUser"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EdiTexWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtPass"/>

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnLogin"
                    android:theme="@style/RaiseButtonDark"
                    android:onClick="Contenedor"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/notengocuenta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notengocuenta"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/txtSize_notengocuenta"/>
                    <TextView
                        android:id="@+id/crearaqui"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crearaqui"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/txtSize_notengocuenta"
                        android:layout_toRightOf="@+id/notengocuenta"
                        android:onClick="crear" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>