<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PictureDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbarlayout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            >

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/bijao1"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_vertical_margin"
            >
            <TextView
                android:id="@+id/usernameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_username"
                android:text="@string/usernombrecard"
                android:paddingLeft="@dimen/padding_horizontal_margin"
                android:paddingRight="@dimen/padding_vertical_margin"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_vertical_margin"
                android:paddingLeft="@dimen/padding_horizontal_margin"
                android:paddingRight="@dimen/padding_horizontal_margin"
                >
                <TextView
                    android:id="@+id/likeNumberDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_likeNumberDetail"
                    android:text="20"
                    />
                <TextView
                    android:id="@+id/seconword_deteil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_likeNumberDetail"
                    android:text="@string/seconword_deteil"
                    android:layout_marginLeft="@dimen/marginleft_secondword"
                    />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_divide"
                android:background="@android:color/darker_gray"
                />
            <TextView
                android:id="@+id/titleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_likeNumberDetail"
                android:text="@string/titleImage"
                android:layout_marginLeft="@dimen/marginleft_secondword"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/paddingtop_titleImage"
                />

            <TextView
                android:id="@+id/textContentImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_likeNumberDetail"
                android:text="@string/lorem"
                android:layout_marginLeft="@dimen/marginleft_secondword"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/paddingtop_titleImage"
                android:paddingLeft="@dimen/padding_horizontal_textContectDeteil"
                android:paddingRight="@dimen/padding_horizontal_textContectDeteil"
                />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/onlike"
        app:layout_anchor="@+id/appBar"
        app:layout_anchorGravity="bottom|end"
        />

</android.support.design.widget.CoordinatorLayout>